@@ -1,3 +1,15 @@
+2009-09-21  Raphael 'kena' Poss  <r.c.poss@uva.nl>
+
+	Add some demos with graphics.
+
+	`checkers' - create a 8x8 checker board.	
+	`mandel' - approximate the Mandelbrot set.
+
+	* demo/checkers.c,
+	* demo/mandel.c: New.
+
+	* demo/Makefile.am: Update accordingly.
+
 2009-08-28  Raphael 'kena' Poss  <r.c.poss@uva.nl>
 
 	Extend the SHA benchmark code.
